# DirectXShaderCompiler

./: .gitignore  .travis.yml  CMakeLists.txt  appveyor.yml
cmake/modules/: AddLLVM.cmake  HandleLLVMOptions.cmake
docs/: DxcOnLinux.rst  DxcOnUnix.rst  SPIR-V.rst
include/dxc/: dxcapi.h  dxcapi.internal.h  dxcisense.h
include/llvm-c/: Core.h  Disassembler.h
lib/Analysis/: Analysis.cpp  TargetLibraryInfo.cpp
lib/DxcSupport/: CMakeLists.txt  FileIOHelper.cpp  HLSLOptions.cpp  Unicode.cpp  WinAdapter.cpp  WinFunctions.cpp  dxcapi.use.cpp  dxcmem.cpp
lib/HLSL/: ComputeViewIdState.cpp  DxilGenerationPass.cpp  DxilMetadataHelper.cpp  DxilOperations.cpp  DxilRootSignature.cpp  DxilShaderAccessTracking.cpp  DxilValidation.cpp  HLModule.cpp  HLOperationLower.cpp
lib/IR/: Function.cpp
lib/MSSupport/: MSFileSystemImpl.cpp
lib/Support/: APFloat.cpp  CMakeLists.txt  ConvertUTFWrapper.cpp  Debug.cpp  Regex.cpp  WinAdapter.cpp  WinFunctions.cpp  raw_ostream.cpp  regerror.c  regex_impl.h
tools/clang/tools/hlsl2spirv/: CMakeLists.txt  hlsl2spirv.cpp
tools/clang/unittests/SPIRV/: CMakeLists.txt  CodeGenSPIRVTest.cpp  CodeGenSpirvTest.cpp  ConstantTest.cpp  DecorationTest.cpp  FileTestFixture.cpp  FileTestUtils.cpp  FileTestUtils.h  InstBuilderTest.cpp  ModuleBuilderTest.cpp  SPIRVContextTest.cpp  SPIRVTestOptions.cpp  SPIRVTestOptions.h  SPIRVTestUtils.h  SpirvConstantTest.cpp  StructureTest.cpp  TestMain.cpp  TypeTest.cpp  UtilsTest.cpp  WholeFileCheck.cpp  WholeFileCheck.h
unittests/: Makefile.unittest
utils/TableGen/: TableGen.cpp
utils/hct/: hctbuild.cmd  (+1 more)
(+172 files in other folders)
